--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.12.0",
         "bulma": "^0.8.0",
         "laravel-echo": "^1.6.1",
         "socket.io-client": "^2.3.0",
